k8s copy/test/ingress-user.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.org/proxy-connect-timeout: "3600s"
    nginx.org/proxy-read-timeout: "3600s"
  name: ingress-user
  namespace: user
spec:
  ingressClassName: nginx
  rules:
    - host: user.megotours.kz
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
              service:
                name: user-service
                port: 
                  number: 80
