k8s copy/test/user-deployment-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  namespace: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - image: registry.gitlab.com/mego.tours/backend/user/main:latest
        name: user
        imagePullPolicy: Always
        env:
        - name: DB_NAME
          valueFrom:
            configMapKeyRef:
              name: user-configmap
              key: DB_NAME
        - name: DB_USER
          valueFrom:
            configMapKeyRef:
              name: user-configmap
              key: DB_USER
        - name: DB_PASSWORD
          valueFrom:
            configMapKeyRef:
              name: user-configmap
              key: DB_PASSWORD
        - name: DB_ROOT_PASSWORD
          valueFrom:
            configMapKeyRef:
              name: user-configmap
              key: DB_ROOT_PASSWORD
        - name: DB_HOST
          valueFrom:
            configMapKeyRef:
              name: user-configmap
              key: DB_HOST
        - name: DB_PORT
          valueFrom:
            configMapKeyRef:
              name: user-configmap
              key: DB_PORT
        - name: REDIS_HOST
          valueFrom:
            configMapKeyRef:
              name: user-configmap
              key: REDIS_HOST
        - name: REDIS_PORT
          valueFrom:
            configMapKeyRef:
              name: user-configmap
              key: REDIS_PORT
        - name: USER_SERVICE_SERVER_PORT
          valueFrom:
            configMapKeyRef:
              name: user-configmap
              key: USER_SERVICE_SERVER_PORT
        - name: DB_URL
          valueFrom:
            configMapKeyRef:
              name: user-configmap
              key: DB_URL
        - name: AUTH_SERVICE_ADDRESS
          valueFrom:
            configMapKeyRef:
              name: user-configmap
              key: AUTH_SERVICE_ADDRESS
        - name: STORAGE_SERVICE_ADDRESS
          valueFrom:
            configMapKeyRef:
              name: user-configmap
              key: STORAGE_SERVICE_ADDRESS
        - name: JWT_SECRET
          valueFrom:
            configMapKeyRef:
              name: user-configmap
              key: JWT_SECRET
        ports:
        - containerPort: 80
          name: http

---

kind: Service 
apiVersion: v1 
metadata:
  name: user-service
  namespace: user
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
    - port: 80
      targetPort: 80
